cmake_minimum_required(VERSION 3.22)

set(CXX_STANDARD 23)

add_executable(2 2.cpp)
add_executable(3 3.cpp)
add_executable(4 4.cpp)
add_executable(5 5.cpp)
add_executable(6 6.cpp)
add_executable(7 7.cpp)
add_executable(8 8.cpp)
add_executable(9 9.cpp)
add_executable(10 10.cpp)
add_executable(18 18.cpp)
add_executable(67 67.cpp)

